Added optional JRE to Windows installer